# interior-point

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yml
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/api/: index.md
docs/guide/: getting-started.md
examples/comparison/: package.json
js/: README.md  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
js/src/: index.ts  interiorPoint.ts  interiorPointArea.ts  interiorPointLine.ts  interiorPointPoint.ts
js/test/: interiorPoint.bench.ts  interiorPoint.test.ts  interiorPointWorld.test.ts
js/test/utils/: sineStar.ts  wktParser.ts  xmlTestParser.ts
rs/: Cargo.toml  LICENSE_EDLv1.txt  README.md
rs/benches/: interior_point_bench.rs
rs/core/: Cargo.toml  LICENSE_EDLv1.txt
rs/core/benches/: interior_point_bench.rs
rs/core/benches/utils/: mod.rs  sine_star.rs
rs/core/src/: interior_point_area.rs  interior_point_line.rs  interior_point_point.rs  lib.rs
rs/core/tests/: interior_point_test.rs  interior_point_world_test.rs
rs/core/tests/utils/: xml_test_parser.rs
rs/src/: lib.rs  wasm.rs
rs/tests/: interior_point_test.rs  interior_point_world_test.rs
rs/tests/utils/: mod.rs
rs/wasm/: Cargo.toml
rs/wasm/src/: lib.rs
