[package]
name = "interior-point-wasm"
version.workspace = true
edition = "2021"
license.workspace = true
description = "WASM bindings for interior-point crate"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
interior-point = { path = "../core" }
geo-types.workspace = true
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
geojson = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
